feat: install kubectl jq and microsoft-edge

--- a/osx/scripts/Brewfile
+++ b/osx/scripts/Brewfile
@@ -8,6 +8,8 @@ brew "antigen"
 brew "go"
 brew "nvm"
 brew "tophat/bar/yvm"
+brew "kubectl"
+brew "jq"
 
 cask "alacritty"
 cask "caffeine"
@@ -18,3 +20,5 @@ cask "sourcetree"
 cask "docker"
 cask "spotify"
 cask "slack"
+cask "microsoft-edge"
+
