feat: add ansible and vagrant

--- a/osx/scripts/Brewfile
+++ b/osx/scripts/Brewfile
@@ -13,6 +13,7 @@ brew "jq"
 brew "docker-compose"
 brew "awscli"
 brew "ffmpeg"
+brew "ansible"
 
 cask "alacritty"
 cask "caffeine"
@@ -28,3 +29,4 @@ cask "firefox"
 cask "dotnet-sdk"
 cask "vmware-fusion"
 cask "virtualbox"
+cask "vagrant"
