feat: use windows credentials for git

--- a/win/wsl/home/.gitconfig
+++ b/win/wsl/home/.gitconfig
@@ -3,3 +3,5 @@
 	name = tsukiy0
 [core]
 	editor = vim
+[credential]
+	helper = /mnt/c/Program\\ Files/Git/mingw64/libexec/git-core/git-credential-manager.exe
